@@ -1,1 +1,3 @@
 # CIC_Challenge
+Beim compilieren mit --add-modules java.xml.bind
+Service "Filter" ist leider nicht implenmentiert
